[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccds"]

[project]
name = "ccml"
version = "0.0.1"
description = "CookieCutterMachineLearning Template: A logical, reasonably standardized but flexible project structure for doing and sharing data science work."
authors = [
  { name = "Heliton Martins", email = "helitonmrf@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
  "click",
  "cookiecutter",
]

[project.scripts]
ccml = "ccds.__main__:main"

[project.urls]
"Homepage" = "https://github.com/hellmrf/ccml"
"Source Code" = "https://github.com/hellmrf/ccml"
"Bug Tracker" = "https://github.com/hellmrf/ccml/issues"

[tool.uv]
package = true

